--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
     <title>Bootstrap Freelancer</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="d-flex navbar-nav me-auto mb-2 mb-md-0">
+              <li class="nav-item">
+                <a class="nav-link" href="#">PORTFOLIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">ABOUT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">CONTACT</a>
+              </li>
+            </ul>
+          </div>
+      </nav>
+
     <div class="container-fluid">
         <div class="col d-flex bg-azure flex-column align-items-center start-bootstrap">
-            <div class="pic"></div>
+            <img class="col-2" src="img/avatar.svg" alt="Avatar">
             START BOOTSTRAP
             <br><hr>
         </div>
