--- a/index.html
+++ b/index.html
@@ -38,15 +38,13 @@
         <div class="col d-flex bg-white flex-column align-items-center start-bootstrap">
             PORTFOLIO
             <br><hr>
-            <div class="container-lg row g-4 portfolio">
-                <div class="col pic"></div>
-                <div class="col pic"></div>
-                <div class="col pic"></div>
-            </div>
-            <div class="container-lg row g-4 portfolio">
-                <div class="col pic"></div>
-                <div class="col pic"></div>
-                <div class="col pic"></div>
+            <div class="container-lg row g-2 d-flex flex-wrap portfolio">
+                <img class="col-lg-4 col-md-6 col-xs-12" src="img/cabin.png" alt="Cabin">
+                <img class="col-lg-4 col-md-6 col-xs-12" src="img/cake.png" alt="Cake">
+                <img class="col-lg-4 col-md-6 col-xs-12" src="img/circus.png" alt="Circus">
+                <img class="col-lg-4 col-md-6 col-xs-12" src="img/game.png" alt="Game">
+                <img class="col-lg-4 col-md-6 col-xs-12" src="img/safe.png" alt="Safe">
+                <img class="col-lg-4 col-md-6 col-xs-12" src="img/submarine.png" alt="Submarine">
             </div>
         </div>
 
