--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,15 +51,38 @@
 
         <div class="col d-flex flex-column align-items-center bg-azure start-bootstrap">
             ABOUT
-            <br>
-            <div class="row g-2">
-                <div class="col-1 text">sadgasidhdifuhdiufhsidufhaisdshdbahsdajshdvahsdiasdaisdiasuga</div>
-                <div class="col-1 text">sadgasidhdifuhdiufhsidufhaisdshdbahsdajshdvahsdiasdaisdiasuga</div>
+            
+            <div class="row g-5 justify-content-center">
+                <div class="col-lg-4 col-xs-10 text">
+                    Freelancer is a free bootstrap theme created by Start Bootstrap.
+                    The download includes the complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheets for easy customization.
+                </div>
+                <div class="col-lg-4 col-xs-10 text">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</div>
             </div>
+            <button type="button" class="btn btn-outline-light"><i class="fas fa-download"></i> Download</button>
         </div>
 
         <div class="col d-flex flex-column align-items-center bg-white start-bootstrap">
             CONTACT ME
+            <form class="container-fluid text-align-left">
+                <div class="mb-3">
+                  <label for="name" class="form-label"></label>
+                  <input type="text" class="form-control" id="name" placeholder="Name">
+                </div>
+                <div class="mb-3">
+                  <label for="Email" class="form-label"></label>
+                  <input type="email" class="form-control" id="Email" placeholder="Email Address">
+                </div>
+                <div class="mb-3">
+                  <label for="phonenumber" class="form-label"></label>
+                  <input type="text" class="form-control" id="phonenumber" placeholder="Phone Number">
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label"></label>
+                    <textarea class="form-control" id="message" rows="3" placeholder="Message"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary bg-azure">Send</button>
+              </form>
         </div>
     </div>
 </body>
