--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <title>Bootstrap Freelancer</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark justify-content-around flex-nowrap">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">START BOOTSTRAP</a>
         </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="d-flex navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
@@ -27,18 +30,29 @@
               </li>
             </ul>
           </div>
+          
       </nav>
 
     <div class="container-fluid">
         <div class="col d-flex bg-azure flex-column align-items-center start-bootstrap">
             <img class="col-2" src="img/avatar.svg" alt="Avatar">
-            START BOOTSTRAP
-            <br><hr>
+            <h1>START BOOTSTRAP</h1>
+            <div class="d-flex align-items-center star">
+              <hr>
+              <i class="fas fa-star"></i>
+              <hr>
+            </div>
+            <br>
         </div>
 
         <div class="col d-flex bg-white flex-column align-items-center start-bootstrap">
-            PORTFOLIO
-            <br><hr>
+            <h1>PORTFOLIO</h1>
+            <br>
+            <div class="d-flex align-items-center star">
+              <hr>
+              <i class="fas fa-star"></i>
+              <hr>
+            </div>
             <div class="container-lg row g-2 d-flex flex-wrap portfolio">
                 <img class="col-lg-4 col-md-6 col-xs-12" src="img/cabin.png" alt="Cabin">
                 <img class="col-lg-4 col-md-6 col-xs-12" src="img/cake.png" alt="Cake">
@@ -50,20 +64,30 @@
         </div>
 
         <div class="col d-flex flex-column align-items-center bg-azure start-bootstrap">
-            ABOUT
+            <h1>ABOUT</h1>
+            <div class="d-flex align-items-center star">
+              <hr>
+              <i class="fas fa-star"></i>
+              <hr>
+            </div>
             
             <div class="row g-5 justify-content-center">
-                <div class="col-lg-4 col-xs-10 text">
+                <div class="col-lg-4 col-xs-5 text">
                     Freelancer is a free bootstrap theme created by Start Bootstrap.
                     The download includes the complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheets for easy customization.
                 </div>
-                <div class="col-lg-4 col-xs-10 text">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</div>
+                <div class="col-lg-4 col-xs-5 text">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</div>
             </div>
             <button type="button" class="btn btn-outline-light"><i class="fas fa-download"></i> Download</button>
         </div>
 
         <div class="col d-flex flex-column align-items-center bg-white start-bootstrap">
-            CONTACT ME
+            <h1>CONTACT ME</h1>
+            <div class="d-flex align-items-center star">
+              <hr>
+              <i class="fas fa-star"></i>
+              <hr>
+            </div>
             <form class="container-fluid text-align-left">
                 <div class="mb-3">
                   <label for="name" class="form-label"></label>
@@ -84,6 +108,32 @@
                 <button type="submit" class="btn btn-primary bg-azure">Send</button>
               </form>
         </div>
+
+        <footer class="footer d-flex justify-content-around align-items-baseline row start-bootstrap bg-dark">
+          <div class="col-lg-2">
+            <br>
+            LOCATION
+            <br>
+            2215 John Daniel Drive Clark, MO 54243
+          </div>
+          <div class="col-lg-2">
+            <br>
+            AROUND THE WEB
+            <br>
+            <button type="button" class="btn btn-outline-light round"> <i class="fab fa-facebook-f"></i> </button>
+            <button type="button" class="btn btn-outline-light round"> <i class="fab fa-google-plus-g"></i> </button>
+            <button type="button" class="btn btn-outline-light round"> <i class="fab fa-twitter"> </i> </button>
+            <button type="button" class="btn btn-outline-light round"> <i class="fab fa-linkedin-in"> </i></button>
+          </div>
+
+          <div class="col-lg-2">
+            <br>
+            ABOUT FREELANCER
+            <br>
+            Freelancer is a free to use, open source Bootstrap theme created by <a href="#">Start Bootstrap.</a>
+          </div>
+        </footer>
+        <div class="row bg-darker justify-content-center">Copyright @ Your Website 2019</div>
     </div>
 </body>
 </html>
